# callisto

./: .firebaserc  .gitignore  CLAUDE.md  LOCAL_DEV.md  README.md  compose.gcs.yaml  compose.yaml  firebase-canary.json  firebase.json
.devcontainer/: Dockerfile
.github/workflows/: be-testing-pull-request.yml  canary-be-merge.yml  canary-fe-merge.yml  cloud-run-merge.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  prod-be-merge.yml  prod-fe-merge.yml
callisto/: .gcloudignore  Cargo.toml  Dockerfile  FAQ.md  build_keys.sh  clear_coverage.sh  cloudbuild.yaml  default_7626692968185418922_0_80864.profraw  default_7626692968185418922_0_86840.profraw  foo.txt  localhost.crt  localhost.crt.der  localhost.csr  localhost.key  run_coverage.sh  rustc-ice-2024-07-22T04_22_05-3168.txt  rustfmt.toml
callisto/coverage/: tests.lcov
callisto/scenarios/: default_ship_templates.json  first_prize.json  jupiter.json  planetfun.json  planetfun2.json  raiders.json  scenario.json  scenario2.json  sol.json  tutorial.json
callisto/ship_templates/: buccaneer.json  default_ship_templates.json  ekawsiykua_escort.json  far_trader.json  free_trader.json  gazelle.json  harrier.json  herald_fast_messenger.json  indigo_pirate_carrier.json  light_fighter.json  midu_agasham.json  patrol_corvette_type_t.json  scout_courier.json  star_ray_interceptor.json  system_defense_boat.json  threshing_oar.json  void_trader.json
callisto/src/: action.rs  authentication.rs  combat.rs  combat_tables.rs  computer.rs  cov_util.rs  crew.rs  damage_tables.rs  entity copy.rs  entity.rs  lib.rs  main.rs  missile.rs  old_combat.rs  old_damage_tables.rs  payloads.rs  planet.rs  player.rs  processor.rs  rules_tables.rs  server.rs  ship.rs  tests.rs  unit_tests.rs
callisto/tests/: test-scenario.json  webserver.rs
callisto/tests/scenarios/: test-scenario.json
callisto/tests/templates/: test_templates.json
callisto/tracing_gcp/: Cargo.toml
callisto/tracing_gcp/src/: lib.rs
fe/: package-lock.json  package.json
fe/callisto/: .env  .env.example  .gitignore  Dockerfile  MIGRATION_TO_VITE.md  README.Docker.md  compose.yaml  eslint.config.mjs  index.html  old-package.json  package-lock.json  package.json  processed.txt  tsconfig.json  vite.config.ts
fe/callisto/bower_components/threex.planets/: .bower.json
fe/callisto/bower_components/threex.planets/examples/: atmospherematerial.html
fe/callisto/public/: index.html  manifest.json
fe/callisto/src/: Accordion.tsx  Actions.tsx  AddShip.tsx  App.test.js  App.tsx  Authentication.tsx  Contexts.tsx  Controls.tsx  CrewBuilder.tsx  Effects.tsx  EntitySelector.tsx  FiberFixes.d.ts  Role.tsx  ScenarioManager.tsx  ServerManager.tsx  ShipComputer.tsx  Ships.tsx  Spaceview.tsx  Tutorial.tsx  Universal.tsx  UserList.tsx  Util.tsx  WeaponUse.tsx  atmospherematerial.js  custom-typings.d.ts  dontuse.d.ts  index.css  index.tsx  old-App.tsx  oldSpaceview.tsx  shipnames.ts  vite-env.d.ts
fe/callisto/src/components/: Role.tsx  Tutorial.tsx  UserList.test.tsx  UserList.tsx
fe/callisto/src/components/controls/: Actions.tsx  AddPlanet.tsx  AddShip.tsx  CaptainTasks.tsx  Controls.tsx  CrewBuilder.tsx  EngineerTasks.tsx  ShipComputer.tsx  WeaponUse.tsx
fe/callisto/src/components/scenarios/: Authentication.test.tsx  Authentication.tsx  SaveScenarioDialog.tsx  ScenarioManager.tsx
fe/callisto/src/components/space/: Effects.tsx  Planet.tsx  PlanetTextures.tsx  PlanetVisualEffects.tsx  Ships.tsx  Spaceview.tsx
fe/callisto/src/lib/: Accordion.tsx  EntitySelector.tsx  FlyControls.tsx  Util.tsx  entities.ts  flightPath.ts  serverManager.test.ts  serverManager.ts  shipDesignTemplates.ts  shipnames.ts  universal.ts  view.ts  weapon.ts
fe/callisto/src/state/: actionsSlice.ts  server.ts  serverSlice.ts  store.ts  tutorial.ts  tutorialSlice.ts  uiSlice.ts  userSlice.ts
math/: BangBang.ipynb
scripts/: build_keys.sh  dev-be.sh  dev-fe.sh  dev-up.sh  migrate-users-file.sh  run_coverage.sh  upload-designs.sh  upload-scenarios.sh  users-blacklist.sh
