[package]
name = "callisto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18", features = ["swizzle", "serde", "rand", "mint"] }
hyper = { version = "1.2", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.37.0", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
gomez = "0.5.0"
serde_with = { version = "3.8.1", features = ["json"] }
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
derivative = "2.2.0"
assert-json-diff = "2.0.2"
approx = "0.5.1"
once_cell = "1.20.2"
strum_macros = "0.26.4"
atomic-counter = "1.0.1"

[dev-dependencies]
mockstream = "0.0.3"
lazy_static = "1.4.0"
test-log="*"
duct = "0.13.7"
reqwest = "0.12.4"

[[bin]]
name = "callisto"
path = "src/main.rs"

[lib]
name = "callisto"
path = "src/lib.rs"
