[package]
name = "callisto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ci = []
no_tls_upgrade = []

[dependencies]
cgmath = { version = "0.18", features = ["swizzle", "serde", "rand", "mint"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.37.0", features = ["full"] }
pretty_env_logger = "0.5.0"
gomez = "0.5.0"
serde_with = { version = "3.8.1", features = ["json"] }
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
derivative = "2.2.0"
assert-json-diff = "2.0.2"
approx = "0.5.1"
once_cell = "1.20.2"
strum_macros = "0.26.4"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
base64 = "0.22.1"
google-cloud-storage = "0.22.1"
async-trait = "0.1.83"
quit = "2.0.0"
rustls = "0.23.21"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26.1"
futures-util = "0.3.31"
futures = "0.3.31"
pem = "3.0.4"
dyn-clone = "1.0.18"
itertools = "0.14.0"
egobox-doe = "0.27.1"
ndarray = "0.15.6"
test-log = "*"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
strum = "0.27.1"
tracing-gcp = "0.1.0"

[dev-dependencies]
test-log="*"
reqwest = { version = "0.12.4", features = ["json"] }
async-trait = "0.1.83"

[[bin]]
name = "callisto"
path = "src/main.rs"

[lib]
name = "callisto"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints.clippy]
pedantic = { level="warn", priority = -1 }
similar_names = "allow"
